Added lombok dependency and home feature